# behavioral-finance-ai

./: .gitignore  README.md  WARP.md  pyproject.toml  requirements.txt
config/: config.yaml
data/sample/src/behavioral_finance/: models.py
docs/: README.md
src/behavioral_finance/: __init__.py  analysis.py  data.py  models.py
tests/: test_data.py
