[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavioral-finance-ai"
version = "0.1.0"
description = "A sophisticated AI engine for analyzing legacy financial data through behavioral finance principles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Behavioral Finance AI Team", email = "team@behavioral-finance-ai.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["behavioral-finance", "machine-learning", "financial-analysis", "ai", "legacy-data"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.971"
]
ml = [
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.10.0",
    "torch>=1.12.0"
]
financial = [
    "yfinance>=0.1.70",
    "pandas-datareader>=0.10.0",
    "ta-lib>=0.4.25"
]
nlp = [
    "nltk>=3.7",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2"
]
viz = [
    "plotly>=5.10.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0"
]
stats = [
    "statsmodels>=0.13.0",
    "pingouin>=0.5.0"
]
db = [
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0"
]

[project.urls]
Homepage = "https://github.com/behavioral-finance-ai/behavioral-finance-ai"
Repository = "https://github.com/behavioral-finance-ai/behavioral-finance-ai.git"
Issues = "https://github.com/behavioral-finance-ai/behavioral-finance-ai/issues"

[project.scripts]
bf-analyze = "behavioral_finance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/behavioral_finance --cov-report=html --cov-report=term-missing"
